--- a/acme_project/templates/birthday/birthday.html
+++ b/acme_project/templates/birthday/birthday.html
@@ -1,5 +1,34 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block content %}
-
+  <div class="card">
+    <div class="card-header">
+      {% if instance %}
+        <h1>Редактировать запись {{ instance.pk }}</h1>
+      {% else %}
+        <h1>Создать запись</h1>
+      {% endif %}
+    </div>
+    <div class="card-body">
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% bootstrap_button button_type="submit" content="Сохранить" %}
+        <a href="{% url 'birthday:list' %}" class="btn btn-secondary">Отмена</a>
+      </form>
+    </div>
+    
+    {% if instance and 'birthday_countdown' in locals or birthday_countdown %}
+      <div class="card-footer">
+        <hr>
+        <h2>Привет, {{ instance.first_name }} {{ instance.last_name }}</h2>
+        {% if birthday_countdown == 0 %}
+          <p>С днём рождения!</p>
+        {% else %}
+          <p>Осталось дней до дня рождения: {{ birthday_countdown }}!</p>
+        {% endif %}
+      </div>
+    {% endif %}
+  </div>
 {% endblock %}
