--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -15,7 +15,11 @@
           {{ birthday.first_name }} {{ birthday.last_name }} - {{ birthday.birthday }}
         </div>      
         <div>
-          <a href="{% url 'birthday:edit' birthday.id %}">Изменить запись</a> | <a href="{% url 'birthday:delete' birthday.id %}">Удалить запись</a> | 
+          {% if birthday.author == user %}
+            <div>
+              <a href="{% url 'birthday:edit' birthday.id %}">Изменить запись</a> | <a href="{% url 'birthday:delete' birthday.id %}">Удалить запись</a>
+            </div>
+          {% endif %} 
           <a href="{% url 'birthday:detail' birthday.id %}">Сколько до дня рождения?</a>
         </div>
       </div>
